--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-943.7KB/s(Youtube:不良林), server: 37.120.192.158, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇦 加拿大-2.34MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-333.8KB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇭🇰 香港-3.87MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-346.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-697.9KB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
