--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林), server: 213.183.53.200, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 37.120.192.158, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.05MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇭🇰 香港-3.87MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-346.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-697.9KB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.10MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇳🇱 荷兰-3.50MB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇸🇬 新加坡-2.01MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
