--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.87MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-1.50MB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 213.183.53.182, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-589.4KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林), server: 213.183.53.207, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇭🇰 香港-3.63MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇳🇱 荷兰-3.50MB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
   - {name: 🇸🇬 新加坡-2.01MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2, server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-268.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-589.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-305.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
 rules:
